--- a/prepros.config
+++ b/prepros.config
@@ -472,7 +472,7 @@
         ],
         "output": {
           "extension": ".css",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "scss",
@@ -482,7 +482,8 @@
               "segment": "sass",
               "replaceWith": "css"
             }
-          ]
+          ],
+          "relativePath": "../css"
         }
       },
       "less": {
